--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -133,9 +133,11 @@
     <ClCompile Include="String.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AnotherCity.h" />
     <ClInclude Include="CitiesGraph.h" />
     <ClInclude Include="City.h" />
     <ClInclude Include="HashMap.h" />
+    <ClInclude Include="MinHeap.h" />
     <ClInclude Include="Parameters.h" />
     <ClInclude Include="String.h" />
     <ClInclude Include="Vector.h" />
